syntax = "proto3";
option java_multiple_files = false;
option java_package = "com.ricardo.grpc.api";
option java_outer_classname = "HelloProto";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string result = 1;
}

message HelloRequest1 {
  repeated string name = 1;
}

service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
  rpc sayHelloAgain(HelloRequest1) returns (HelloResponse);
}
